@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-29T00:43:56Z",
+  "timestamp" : "2023-08-29T08:12:41Z",
   "count_outdated" : 2792,
   "uniques_outdated" : 1112,
-  "count" : 2803,
-  "uniques" : 1119,
+  "count" : 2804,
+  "uniques" : 1120,
   "clones" : [
     {
       "timestamp": "2023-08-15T00:00:00Z",
@@ -61,6 +61,15 @@
     },
     {
       "timestamp": "2023-08-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
