@@ -1,5 +1,5 @@
 {
-  "count": 10,
+  "count": 11,
   "uniques": 4,
   "clones": [
     {
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2023-08-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-29T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
